# c64

programming-language/workspace/compiler/: .gitignore  Cargo.toml  LICENSE  README.md  program.cb64
programming-language/workspace/compiler/benches/: compiler_benchmarks.rs
programming-language/workspace/compiler/benches/inputs/: large.cb64  medium.cb64  small.cb64
programming-language/workspace/compiler/docs/: README.md
programming-language/workspace/compiler/examples/: arrays.cb64  bitmap_demo.cb64  charset_data_block.cb64  compound_assignment.cb64  constants.cb64  counter.cb64  fixed_demo.cb64  float_demo.cb64  graphics_test.cb64  hello.cb64  highscores.cb64  input.cb64  joystick_demo.cb64  math.cb64  multicolor_demo.cb64  music_data_block.cb64  scientific.cb64  scroll_demo.cb64  smooth_scroll.cb64  sound_basic.cb64  sound_demo.cb64  sound_effects.cb64  sprite_basic.cb64  sprite_collision.cb64  sprite_colors.cb64  sprite_data_block.cb64  sprite_demo.cb64  sprite_multicolor.cb64  strings.cb64  type_inference.cb64
programming-language/workspace/compiler/fuzz/: Cargo.toml  README.md
programming-language/workspace/compiler/src/: error.rs  lib.rs  main.rs
programming-language/workspace/compiler/tests/: boundary_tests.rs  compound_assignment_tests.rs  conformance_tests.rs  data_block_tests.rs  elif_tests.rs  fuzz_tests.rs  integration_cli.rs  integration_d64.rs  integration_prg.rs  negative_tests.rs  property_tests.proptest-regressions  property_tests.rs  regression_tests.rs  runtime_tests.rs  signed_types_tests.rs  snapshots_test.rs  string_ops_tests.rs
(+266 files in other folders)
