[package]
name = "cobra64"
version = "0.1.0"
edition = "2021"
description = "A modern compiler for the Commodore 64 with Python-like syntax"
authors = ["Marcel Joachim Kloubert <marcel@kloubert.dev>"]
license = "AGPL-3.0-or-later"
readme = "docs/README.md"
keywords = ["c64", "commodore", "compiler", "retro", "6502"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "cobra64"
path = "src/main.rs"

[lib]
name = "cobra64"
path = "src/lib.rs"

[dependencies]
# Lexer generator using derive macros
logos = "0.14"

# CLI argument parsing with derive macros
clap = { version = "4", features = ["derive"] }

# Error handling with derive macros
thiserror = "1.0"

# Beautiful error reporting
ariadne = "0.4"

[dev-dependencies]
# Snapshot testing
insta = "1.34"

# Property-based testing
proptest = "1.4"

# Better assertion diffs
pretty_assertions = "1.4"

# Parameterized tests
test-case = "3.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compiler_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
